--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "scripts": {
     "start": "node server/server.js",
-    "develop": "concurrently \"cd server && npm run dev\" \"cd client && npm run start\"",
+    "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build"
