--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.5.0"
   },
   "scripts": {
     "start": "node server/server.js",
